UX: fix dark mode and header extra info (#25)

--- a/scss/blocks/base.scss
+++ b/scss/blocks/base.scss
@@ -106,7 +106,7 @@
   position: relative;
   display: flex;
   box-sizing: border-box;
-  color: var(--c, var(--neutral-10));
+  color: var(--neutral-10);
   background: var(--bg, var(--neutral-100));
   border-radius: var(--br, var(--rounded-md));
   border: var(--b, var(--border-outer));
