--- a/scss/standards/colors.scss
+++ b/scss/standards/colors.scss
@@ -1,66 +1,15 @@
 :root {
-  --neutral-0: rgba(0, 0, 0, 1);
-  --neutral-5: rgba(30, 31, 32, 1);
-  --neutral-10: rgba(59, 60, 62, 1);
-  --neutral-20: rgba(67, 69, 71, 1);
-  --neutral-30: rgba(76, 80, 82, 1);
-  --neutral-40: rgba(90, 94, 96, 1);
-  --neutral-50: rgba(105, 110, 113, 1);
-  --neutral-60: rgba(132, 137, 140, 1);
-  --neutral-70: rgba(173, 177, 179, 1);
-  --neutral-80: rgba(207, 209, 210, 1);
-  --neutral-90: rgba(230, 231, 231, 1);
-  --neutral-95: rgba(245, 246, 246, 1);
-  --neutral-100: rgba(255, 255, 255, 1);
-
-  --neutral-0-rgb: 0, 0, 0;
-  --neutral-5-rgb: 30, 31, 32;
-  --neutral-10-rgb: 59, 60, 62;
-  --neutral-20-rgb: 67, 69, 71;
-  --neutral-30-rgb: 76, 80, 82;
-  --neutral-40-rgb: 90, 94, 96;
-  --neutral-50-rgb: 105, 110, 113;
-  --neutral-60-rgb: 132, 137, 140;
-  --neutral-70-rgb: 173, 177, 179;
-  --neutral-80-rgb: 207, 209, 210;
-  --neutral-90-rgb: 230, 231, 231;
-  --neutral-95-rgb: 245, 246, 246;
-  --neutral-100-rgb: 255, 255, 255;
-
-  // --primary-0: #000000; /* Black */
-  // --primary-10: #1a237e; /* Very Dark Blue */
-  // --primary-20: #283593; /* Dark Blue */
-  // --primary-3rgb(51, 55, 76)f9f; /* Medium Dark Blue */
-  // --primary-40: #3949ab; /* Medium Blue */
-  // --primary-50: #3f51b5; /* Slightly Lighter Medium Blue */
-  // --primary-60: #5c6bc0; /* Medium Light Blue */
-  // --primary-70: #7986cb; /* Lighter Blue */
-  // --primary-80: #9fa8da; /* Light Blue */
-  // --primary-90: #c5cae9; /* Very Light Blue */
-  // --primary-95: #e8eaf6; /* Pale Blue */
-  // --primary-99: #f5f5f5; /* Near White */
-  // --primary-100: #ffffff;
-
-  --primary-100: #fff;
-  --primary-95: #fef0e9; /* orange-50 */
-  --primary-90: #fbd0bc; /* orange-100 */
-  --primary-80: #f9ba9b; /* orange-200 */
-  --primary-70: #f69a6e; /* orange-300 */
-  --primary-60: #f58651; /* orange-400 */
-  --primary-50: #f26826; /* orange-500 */
-  --primary-40: #dc5f23; /* orange-600 */
-  --primary-30: #ac4a1b; /* orange-700 */
-  --primary-20: #853915; /* orange-800 */
-  --primary-10: #662c10; /* orange-900 */
-  --primary-0: #000;
-
-  --tertiary: var(--primary-50);
-}
-
-@mixin c($type, $shade, $alpha: 1) {
-  color: rgba(var(--#{$type}-#{$shade}), $alpha);
-}
-
-@mixin bgc($type, $shade, $alpha: 1) {
-  background-color: rgba(var(--#{$type}-#{$shade}), $alpha);
+  --neutral-0: var(--primary);
+  --neutral-5: var(--primary-900);
+  --neutral-10: var(--primary-800);
+  --neutral-20: var(--primary-700);
+  --neutral-30: var(--primary-600);
+  --neutral-40: var(--primary-500);
+  --neutral-50: var(--primary-400);
+  --neutral-60: var(--primary-300);
+  --neutral-70: var(--primary-200);
+  --neutral-80: var(--primary-200);
+  --neutral-90: var(--primary-200);
+  --neutral-95: var(--primary-50);
+  --neutral-100: var(--secondary);
 }
